--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,6 +13,8 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 16
+    - name: Lint check
+      run: npm run lint
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Browsers
@@ -24,4 +26,4 @@ jobs:
       with:
         name: playwright-report
         path: playwright-report/
-        retention-days: 30
+        retention-days: 15
